[package]
name = "actix-slog"
version = "0.2.1"
authors = ["Elmar Athmer <elmar@athmer.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/elmarx/actix-slog"
homepage = "https://github.com/elmarx/actix-slog"
keywords = ["log", "logging", "structured", "actix-web", "json-logging"]
categories = ["web-programming::http-server", "development-tools::debugging"]
description = "structured access-logging for actix-web utilizing slog, thus enabling JSON-logging"

[dependencies]
chrono = "0.4.13"
futures = "0.3.5"
actix-web = { version = "4.1.0", default-features = false }
pin-project = "1.0.1"
slog = "2.5.2"

[dev-dependencies]
slog-json = "2.3.0"
slog-term = "2.6.0"
slog-async = "2.5.0"


